Hide window's scrollbar, fix nav-bar's scrollbar

--- a/src/todoList/stylesheet/CategoryBtn.scss
+++ b/src/todoList/stylesheet/CategoryBtn.scss
@@ -4,7 +4,7 @@
     color: #EBFCFF;
 
     width: 100%;
-    height: 60px;
+    min-height: 60px;
     margin-bottom: 30px;
 
     background-color: #3C6FCD;
