--- a/src/todoList/stylesheet/CategoryList.scss
+++ b/src/todoList/stylesheet/CategoryList.scss
@@ -2,4 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    height: 100%;
+    overflow-y: scroll;
+    scrollbar-width: none;
 }
