--- a/src/todoList/stylesheet/ToDoList.scss
+++ b/src/todoList/stylesheet/ToDoList.scss
@@ -5,6 +5,7 @@
     flex-direction: row;
 
     >.nav-bar, >.board {
+        box-sizing: border-box;
         height: 100%;
         padding: 40px;
     }
